# umamusume-novel

./: .env.template  .gitignore  RAG.py  WEB.py  crawlonweb.py  error.md  gen_novel.md  main.py  pyproject.toml  raginfomcp.py  readme.md  requirements.txt  requirements_lock.txt  result.md  run-client.sh  run-param.sh  run-server.sh  run.sh  stop-server.sh  testmcp.py  umamusume_client.py  umamusume_create_novel.py  umamusume_query.py  webinfomcp.py
docs/: PORTS.md
frontend/: .env.template  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/docs/: CHANGELOG.md  I18N.md
frontend/src/: App.vue  main.js
frontend/src/components/: HistoryDrawer.vue  LanguageSelector.vue
frontend/src/i18n/: index.js
frontend/src/services/: api.js
frontend/src/stores/: novelStore.js
prompt/: searchanalyse.md  searchinrag.md  searchinweb.md  writenovel.md
resources/docs/: umamusume_character_baseinfo.csv  umamusume_character_baseinfo.md  umamusume_game_info.md  web_lists.txt
resources/results/: gen_novel.md
results/: error.md  gen_novel.md
scripts/: deploy.sh  run-client-stream.sh  run-client.sh  run-param.sh  run-server.sh  stop-server.sh  uma_birthday.py
search/: bingsearch.py  googlesearch.py
src/umamusume_novel/: config.py  main.py
src/umamusume_novel/client/: cli.py  umamusume_client.py
src/umamusume_novel/crawler/: crawlonweb.py
tests/: rebuild_vectorstore.py  test_client.py  test_crawler.py  test_search.py  test_sse_mcp.py  test_stream.py  test_stream_mcp.py  testmcp.py  testonbing.py  testongoogle.py
(+14 files in other folders)
